--- a/index.html
+++ b/index.html
@@ -5,16 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instruction Cyber</title>
 
-    <!-- BS4 CSS -->
-    <!-- C1: CDN -->
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"> -->
-
-    <!-- C2: Download files -->
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
-
-    <!-- C3: NPM (Node.js) -->
-    <!-- <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
 
     <!-- FONT GOOGLE -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -62,10 +53,12 @@
       </div>
       <nav class="navInstruction navbar navbar-expand-md container">
         <a class="navbar-brand text-center" href="#">
-          <p class="font-weight-bold mb-0">
-            <i class="fa fa-book"></i> INSTRUCTION
-          </p>
-          <p class="mb-0">EDUCATION</p>
+          <img
+            src="./img/logo-primary.png"
+            alt="Instruction Logo"
+            class="img-fluid"
+            style="max-width: 80px"
+          />
         </a>
         <button
           class="navbar-toggler"
@@ -256,7 +249,7 @@
       </div>
     </section>
     <!-- TEAM -->
-    <section class="team">
+    <section class="team section">
       <div class="heading heading--white">
         <h2>TEAM</h2>
         <p>when climbing the carrer ladder</p>
