--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="header__right">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
           <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-pinterest-p"></i></a>
+          <a href="#"><i class="fab fa-tiktok"></i></a>
           <a href="#"><i class="fab fa-linkedin-in"></i></a>
         </div>
       </div>
@@ -74,16 +74,19 @@
         <div class="collapse navbar-collapse" id="navbarInstruction">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">HOME</a>
+              <a class="nav-link" href="#">Trang Chủ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">ABOUT</a>
+              <a class="nav-link" href="#">Dịch Vụ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">SERVICES</a>
+              <a class="nav-link" href="#">Đối Tác</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">GALLERY</a>
+              <a class="nav-link" href="#">Hồ Sơ Năng Lực</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Về VT</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -95,18 +98,18 @@
                 aria-haspopup="true"
                 aria-expanded="false"
               >
-                PAGES
+                Sản Phẩm
               </a>
               <div
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
               >
-                <a class="dropdown-item" href="#">Codes</a>
-                <a class="dropdown-item" href="#">Icons</a>
+                <a class="dropdown-item" href="#">FarmStay</a>
+                <a class="dropdown-item" href="#">Booking Warranty</a>
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">CONTACT</a>
+              <a class="nav-link" href="#">Liên Hệ</a>
             </li>
           </ul>
         </div>
@@ -128,9 +131,9 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./img/banner1.jpg" class="d-block w-100" alt="banner1" />
+            <img src="./img/BR1.jpg" class="d-block w-100" alt="banner1" />
             <div class="container carousel-caption">
-              <h1>Graphic Work Designing</h1>
+              <h1>Thiết Kế Website</h1>
               <p>
                 Any successful career starts with good education. Together with
                 us you will have deeper knowledge of the subjects
@@ -141,9 +144,9 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./img/banner2.jpg" class="d-block w-100" alt="banner2" />
+            <img src="./img/BR2.jpg" class="d-block w-100" alt="banner2" />
             <div class="container carousel-caption">
-              <h1>Financial Analyst Course.</h1>
+              <h1>Thiết Kế App</h1>
               <p>
                 Any successful career starts with good education. Together with
                 us you will have deeper knowledge of the subjects
@@ -154,9 +157,35 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./img/banner3.jpg" class="d-block w-100" alt="banner3" />
+            <img src="./img/BR3.jpg" class="d-block w-100" alt="banner3" />
             <div class="container carousel-caption">
-              <h1>Digital Marketing Course.</h1>
+              <h1>Thiết Kế Back-End</h1>
+              <p>
+                Any successful career starts with good education. Together with
+                us you will have deeper knowledge of the subjects
+              </p>
+              <button class="btn">
+                Read More <i class="fa fa-angle-double-right"></i>
+              </button>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./img/BR4.jpg" class="d-block w-100" alt="banner4" />
+            <div class="container carousel-caption">
+              <h1>Dịch Vụ Web Hosting</h1>
+              <p>
+                Any successful career starts with good education. Together with
+                us you will have deeper knowledge of the subjects
+              </p>
+              <button class="btn">
+                Read More <i class="fa fa-angle-double-right"></i>
+              </button>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./img/BR5.jpg" class="d-block w-100" alt="banner5" />
+            <div class="container carousel-caption">
+              <h1>Hỗ Trợ Đồ Án</h1>
               <p>
                 Any successful career starts with good education. Together with
                 us you will have deeper knowledge of the subjects
@@ -190,15 +219,14 @@
     <!-- WELCOME -->
     <section class="welcome section">
       <div class="heading">
-        <h2>WELCOME TO EDUCATION</h2>
-        <p>when climbing the carrer ladder</p>
+        <h2>CHÀO MỪNG ĐẾN VINAMIX TECH</h2>
+        <p>Vì bạn, chúng tôi luôn sẵn sàng vượt qua mọi giới hạn!</p>
       </div>
       <div class="welcome__content">
         <p>
-          Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-          enim ad minim veniam, sunt in culpa qui officia deserunt mollit anim
-          id est laboth. Duis aute irure dolor in reprehenderit in voluptate
-          velit esse cillum dolore eu fugiat nulla pariatur sunt in culpa qui .
+          Chúng tôi đặt doanh nghiệp làm trọng tâm cho đối tượng phát triển của
+          công ty. Để đạt được điều đó, ứng dụng phải đáp ứng được các tiêu chí
+          cao cấp như đẹp mắt, dễ dùng, dễ sửa chữa và tốc độ xử lý cao.
         </p>
         <div class="welcome__courses container">
           <div class="row mx-0">
@@ -207,7 +235,7 @@
             >
               <div class="welcome__item">
                 <i class="fa fa-desktop"></i>
-                <h3>Design Course</h3>
+                <h3>Tiện Ích</h3>
                 <h4>FASHION DESIGN</h4>
                 <p>Ncididunt ut labore et t enim ad minim.</p>
                 <h4>INTERIOR DESIGN</h4>
@@ -221,7 +249,7 @@
             >
               <div class="welcome__item">
                 <i class="fa fa-arrows-alt"></i>
-                <h3>Marketing Course</h3>
+                <h3>Chất Lượng</h3>
                 <h4>FACEBOOK MARKETING</h4>
                 <p>Ncididunt ut labore et t enim ad minim.</p>
                 <h4>YOUTUBE MARKETING</h4>
@@ -235,7 +263,7 @@
             >
               <div class="welcome__item">
                 <i class="fa fa-chart-bar"></i>
-                <h3>Financial Course</h3>
+                <h3>Tối Ưu Chi Phí</h3>
                 <h4>COMPLEXITIES OF BANKING</h4>
                 <p>Ncididunt ut labore et t enim ad minim.</p>
                 <h4>COMPLIANCE REGULATIONS</h4>
@@ -251,19 +279,19 @@
     <!-- TEAM -->
     <section class="team section">
       <div class="heading heading--white">
-        <h2>TEAM</h2>
-        <p>when climbing the carrer ladder</p>
+        <h2>Thành Viên</h2>
+        <p></p>
       </div>
       <div class="team__content">
         <div class="team__item">
           <img src="./img/t1.jpg" alt="t1" />
           <div class="team__title">
-            <h3>John Simon</h3>
-            <p class="team__text">-Cake Maker</p>
+            <h3>Trần Chí Nguyên</h3>
+            <p class="team__text">-Developer</p>
           </div>
           <div class="team__details">
-            <h3>John Simon</h3>
-            <p>-Cake Maker</p>
+            <h3>Trần Chí Nguyên</h3>
+            <p>-Developer</p>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem,
               perferendis.
@@ -278,12 +306,12 @@
         <div class="team__item team__item2">
           <img src="./img/t2.jpg" alt="t2" />
           <div class="team__title">
-            <h3>John Simon</h3>
-            <p class="team__text">-Cake Maker</p>
+            <h3>Trần Nam Anh</h3>
+            <p class="team__text">-Developer</p>
           </div>
           <div class="team__details">
-            <h3>John Simon</h3>
-            <p>-Cake Maker</p>
+            <h3>Trần Nam Anh</h3>
+            <p>-Developer</p>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem,
               perferendis.
@@ -298,12 +326,12 @@
         <div class="team__item team__item3">
           <img src="./img/t3.jpg" alt="t3" />
           <div class="team__title">
-            <h3>John Simon</h3>
-            <p class="team__text">-Cake Maker</p>
+            <h3>Tăng Hồ Trung Nam</h3>
+            <p class="team__text">-Developer</p>
           </div>
           <div class="team__details">
-            <h3>John Simon</h3>
-            <p>-Cake Maker</p>
+            <h3>Tăng Hồ Trung Nam</h3>
+            <p>-Developer</p>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem,
               perferendis.
@@ -318,12 +346,12 @@
         <div class="team__item team__item4">
           <img src="./img/t4.jpg" alt="t4" />
           <div class="team__title">
-            <h3>John Simon</h3>
-            <p class="team__text">-Cake Maker</p>
+            <h3>Hồ Minh Đức</h3>
+            <p class="team__text">-Developer</p>
           </div>
           <div class="team__details">
-            <h3>John Simon</h3>
-            <p>-Cake Maker</p>
+            <h3>Hồ Minh Đức</h3>
+            <p>-Developer</p>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem,
               perferendis.
@@ -338,12 +366,12 @@
         <div class="team__item team__item5">
           <img src="./img/t1.jpg" alt="t5" />
           <div class="team__title">
-            <h3>John Simon</h3>
-            <p class="team__text">-Cake Maker</p>
+            <h3>Đoàn Hoàng Ca</h3>
+            <p class="team__text">-Developer</p>
           </div>
           <div class="team__details">
-            <h3>John Simon</h3>
-            <p>-Cake Maker</p>
+            <h3>Đoàn Hoàng Ca</h3>
+            <p>-Developer</p>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem,
               perferendis.
@@ -358,12 +386,12 @@
         <div class="team__item team__item6">
           <img src="./img/t2.jpg" alt="t6" />
           <div class="team__title">
-            <h3>John Simon</h3>
-            <p class="team__text">-Cake Maker</p>
+            <h3>No Name</h3>
+            <p class="team__text">-Designer</p>
           </div>
           <div class="team__details">
-            <h3>John Simon</h3>
-            <p>-Cake Maker</p>
+            <h3>No Name</h3>
+            <p>-Designer</p>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem,
               perferendis.
@@ -380,54 +408,59 @@
     <!-- OUR STATS -->
     <section class="ourStats section">
       <div class="heading heading--white">
-        <h2>OUR STATS</h2>
-        <p>when climbing the carrer ladder</p>
+        <h2>Thông tin Thống kê</h2>
+        <p></p>
       </div>
       <div class="ourStats__content container">
         <div class="row">
           <div class="col-6 col-lg-3">
             <div class="ourStats__item">
-              <i class="fa fa-graduation-cap"></i>
-              <h3>Graduates</h3>
-              <p class="counter">45</p>
-            </div>
-          </div>
-          <div class="col-6 col-sm-6 col-md-6 col-lg-3 col-xl-3">
-            <div class="ourStats__item">
-              <i class="fa fa-user"></i>
-              <h3>Certified Staff</h3>
-              <p class="counter">165</p>
-            </div>
-          </div>
-          <div class="col-6 col-sm-6 col-md-6 col-lg-3 col-xl-3">
-            <div class="ourStats__item">
               <i class="fa fa-users"></i>
-              <h3>Student</h3>
-              <p class="counter">563</p>
+              <h3>Khách Hàng</h3>
+              <p class="counter d-inline">1000</p>
+              <sup class="d-inline">+</sup>
+            </div>
+          </div>
+          <div class="col-6 col-sm-6 col-md-6 col-lg-3 col-xl-3">
+            <div class="ourStats__item">
+              <i class="fa fa-bullseye"></i>
+              <h3>Dự Án Đã Làm</h3>
+              <p class="counter d-inline">1900</p>
+              <sup class="d-inline">+</sup>
+            </div>
+          </div>
+          <div class="col-6 col-sm-6 col-md-6 col-lg-3 col-xl-3">
+            <div class="ourStats__item">
+              <i class="fa fa-handshake"></i>
+              <h3>Đánh Giá Hài Lòng</h3>
+              <p class="counter d-inline">99</p>
+              <sup class="d-inline">%</sup>
             </div>
           </div>
           <div class="col-6 col-sm-6 col-md-6 col-lg-3 col-xl-3">
             <div class="ourStats__item">
               <i class="fa fa-trophy"></i>
-              <h3>Awards</h3>
-              <p class="counter">245</p>
+              <h3>Năm Kinh Nghiệm</h3>
+              <p class="counter d-inline">1</p>
+              <sup class="d-inline">+</sup>
             </div>
           </div>
         </div>
       </div>
     </section>
+
     <!-- OFFER -->
     <section class="offer section">
       <div class="heading">
-        <h2>WHAT WE OFFER</h2>
-        <p>when climbing the carrer ladder</p>
+        <h2>CHÚNG TÔI CUNG CẤP GÌ?</h2>
+        <p></p>
       </div>
       <div class="offer__content container">
         <div class="row">
           <div class="col-12 col-lg-4 offer__col">
             <div class="offer__item">
               <i class="fa fa-graduation-cap"></i>
-              <h3>UNDERGRADUATE STUDY</h3>
+              <h3>INTERNET OF THINGS</h3>
               <p>
                 Lorem ipsum dolor sit amet, Sed ut perspiciatis unde omnis iste
                 natus error sit voluptatem
@@ -437,7 +470,7 @@
           <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 offer__col">
             <div class="offer__item">
               <i class="fa fa-book"></i>
-              <h3>PROFESSIONAL STUDY</h3>
+              <h3>WEBSITE</h3>
               <p>
                 Lorem ipsum dolor sit amet, Sed ut perspiciatis unde omnis iste
                 natus error sit voluptatem
@@ -447,7 +480,7 @@
           <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 offer__col">
             <div class="offer__item">
               <i class="fa fa-align-left"></i>
-              <h3>PROGRAMS</h3>
+              <h3>APP</h3>
               <p>
                 Lorem ipsum dolor sit amet, Sed ut perspiciatis unde omnis iste
                 natus error sit voluptatem
@@ -457,7 +490,7 @@
           <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 offer__col">
             <div class="offer__item">
               <i class="far fa-comment"></i>
-              <h3>ONLINE LEARNING</h3>
+              <h3>GIAO DIỆN UX/UI</h3>
               <p>
                 Lorem ipsum dolor sit amet, Sed ut perspiciatis unde omnis iste
                 natus error sit voluptatem
@@ -467,7 +500,7 @@
           <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 offer__col">
             <div class="offer__item">
               <i class="far fa-bookmark"></i>
-              <h3>SUMMER SESSION</h3>
+              <h3>API</h3>
               <p>
                 Lorem ipsum dolor sit amet, Sed ut perspiciatis unde omnis iste
                 natus error sit voluptatem
@@ -477,7 +510,7 @@
           <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 offer__col">
             <div class="offer__item">
               <i class="fa fa-globe-asia"></i>
-              <h3>GLOBAL EDUCATION</h3>
+              <h3>SERVER</h3>
               <p>
                 Lorem ipsum dolor sit amet, Sed ut perspiciatis unde omnis iste
                 natus error sit voluptatem
@@ -490,8 +523,8 @@
     <!-- FEEDBACK -->
     <section class="feedback section">
       <div class="heading heading--white">
-        <h2>TESTIMONIALS</h2>
-        <p>when climbing the carrer ladder</p>
+        <h2>Khách hàng nói về chúng tôi!</h2>
+        <p></p>
       </div>
       <div class="container">
         <div class="feedback__content">
@@ -506,8 +539,9 @@
               <div class="feedback__bottom">
                 <img src="./img/test1.jpg" alt="" />
                 <div class="feedback__name">
-                  <p>Mary Jane</p>
-                  <p>Lorem, ipsum.</p>
+                  <p>ÔNG NGUYỄN NGỌC TƯỞNG</p>
+                  <p>CEO HTH Company PCCC Hà Nội</p>
+                  <i class="fa fa-star"></i>
                 </div>
               </div>
             </div>
@@ -578,24 +612,21 @@
     <!-- NEWS -->
     <section class="news section">
       <div class="heading">
-        <h2>NEWS & EVENTS</h2>
-        <p>when climbing the carrer ladder</p>
+        <h2>Các Dự Án Đã Thực Hiện</h2>
+        <p></p>
       </div>
       <div class="news__content container">
         <div class="row">
           <div class="col-12 col-md-6 col-lg-5">
             <img class="img-fluid" src="./img/g7.jpg" alt="" />
           </div>
-          <!-- mt-3 mt-md-0 
-                if min-width:768px => margin-top:0
-                <768px => margin-top:1rem -->
           <div class="col-12 col-md-6 col-lg-7 mt-3 mt-md-0">
             <h3>
               <a href="#" data-toggle="modal" data-target="#cyberModal"
-                >SIT AMET JUSTO VITAE</a
+                >FARMSTAY</a
               >
             </h3>
-            <h4>03/01/2021</h4>
+            <h4>01/01/2022</h4>
             <p>
               Proin euismod vehicula vestibulum. Fusce ullamcorper aliquet dolor
               id egestas. Nulla leo purus, facilisis non cursus ut, egestas sed
@@ -610,10 +641,10 @@
           <div class="col-12 col-sm-12 col-md-6 col-lg-7 col-xl-7">
             <h3>
               <a href="#" data-toggle="modal" data-target="#cyberModal"
-                >FUSCE SCELERISQUE</a
+                >BOOKING WARRANTY</a
               >
             </h3>
-            <h4>03/01/2021</h4>
+            <h4>01/01/2022</h4>
             <p>
               Proin euismod vehicula vestibulum. Fusce ullamcorper aliquet dolor
               id egestas. Nulla leo purus, facilisis non cursus ut, egestas sed
