--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
                 <li data-target="#carouselCyber" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselCyber" data-slide-to="1"></li>
                 <li data-target="#carouselCyber" data-slide-to="2"></li>
+                <li data-target="#carouselCyber" data-slide-to="3"></li>
+                <li data-target="#carouselCyber" data-slide-to="4"></li>
+                <li data-target="#carouselCyber" data-slide-to="5"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -878,4 +881,5 @@
     <script src="./js/util.js"></script>
     <script src="./js/backtotop.js"></script>
   </body>
+</html>y>
 </html>
